feat(language): Add Language configuration
- Add new message files with ES, FR and DE languages.
- Modify `Configuration` and `I18n` to support language switching at start (default language value read from configuration file).

fix #20